2009-03-31  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in: don't evaluate the substitution strings

2009-03-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm: re-enable the xterm escapes, should be fixed now.

2009-03-30  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: .info Patch and %a/*.patch are now fully deprecated

2009-03-29  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: for perl 5.10.0 (and later?), change the $perlcmd
	to "/usr/bin/arch -%m perl5.10.0".  (This implies that we cannot
	have perl 5.10.0 on 10.4.)

2009-03-21  Dave Morrison  <drm@finkproject.org>

	* Config.pm, FinkVersion.pm.in, PkgVersion.pm, Services.pm: refactor 
	get_arch().  The fink architecture is now fixed once and for all (at 
	bootstrap, for new installations), with value stored in FinkVersion.pm

2009-03-17  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: default value for VERSIONER_PERL_PREFER_32_BIT 
	under Darwin10 and i386; and only use the gpp 10.6 prefix under i386

2009-03-07  Dave Morrison  <drm@finkproject.org>

	* all: updated Copyright notice

2009-03-06  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Allow another version of perl.

2009-02-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Fix some bogus perl provides, also change xcode
	to not be BuildDependsOnly, since some packages legitimately depend
	upon it at runtime.

2008-12-24  Sebastien Maret  <bmaret@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm: Set proxy env vars before calling
	apt-get. Fixes bug #2040507

2008-12-19  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn for older (not MD5-protected) patch syntaxes

2008-12-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Also store patchfile in .deb

2008-12-12  Alexander Hansen  <akh@finkproject.org>

	* Bootstrap.pm:  Recognize 10.5.6

2008-11-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Remove weird whitespace in diagnostic msg.
