@@ -299,6 +299,11 @@ sub inject_package {
 	
 	import Fink::Services qw(&read_config);
 	require Fink::Config;
+
+### Note to developers: Fink::Config loades Fink::FinkVersion, but it is
+### important not to call Fink::FinkVersion::fink_version or 
+### Fink::FinkVersion::get_arch during inject_package, because inject.pl
+### may be running a version of fink in which those values are incorrect.
 	
 	my $package = shift;
 	my $packagefiles = shift;
@@ -377,7 +382,7 @@ my ($notlocated, $bpath) = &locate_Fink($param);
 Adds local/injected to the Trees list, if not already present.  Returns
 1 on failure, 0 on success.
 
-Called by inject_packages() and fink's postinstall.pl.
+Called by inject_package() and fink's postinstall.pl.
 
 =cut
 
